[package]
name = "opendst-nyx-shim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "opendst-nyx-shim"
path = "src/main.rs"

[dependencies]
nyx-lite       = { path = "/home/ylecaillez/git/nyx-lite" }
vmm            = { path = "/home/ylecaillez/git/nyx-lite/vendor/firecracker-nyx-patches/src/vmm" }
anyhow         = "1.0"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
event-manager  = "=0.4.0"
vmm-sys-util   = "=0.12.1"
micro_http     = { git = "https://github.com/firecracker-microvm/micro-http", rev = "ef43cef7162a55a6790d528a5e76b4fe2da22de0" }
